# sparse_autoencoder

./: .gitignore  README.md  pyproject.toml  testing.py
sparse_autoencoder/: embeddings.py  explanations.py  kernels.py  loss.py  model.py  neuron_analyzer.py  paths.py  topk_sae.py  train.py  vanilla_sae.py  visualize_embeddings.ipynb
