[project]
name = "sparse_autoencoder"
description="Sparse autoencoder for GPT2"
version = "0.1"
authors = [{name = "OpenAI"}]
dependencies = [
    "blobfile",
    "torch",
    "triton",
    "transformer_lens",
    "geom_median",
    "python-dotenv",
    "pymilvus",
    "ipykernel",
    "umap-learn",
    "matplotlib",
    "wordcloud"
]
readme = "README.md"

[build-system]
requires = ["setuptools>=64.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["sparse_autoencoder*"]
